<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="at.tugraz.tc.cyfile.ui.DisplayNoteActivity">

    <ScrollView
        android:id="@+id/SCROLL_VIEW"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/NOTE_MODIFIED"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small_margin_dp"
                android:layout_marginTop="@dimen/minimal_margin_dp"
                android:layout_marginEnd="@dimen/small_margin_dp" />


            <EditText
                android:id="@+id/NOTE_TITLE"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin_dp"
                android:layout_marginEnd="@dimen/default_margin_dp"
                android:layout_marginBottom="0dp"
                android:hint="@string/input_title_note_hint"
                android:inputType="text"
                android:backgroundTint="@android:color/transparent"/>

            <!-- just a divider -->
            <View
                android:layout_width="fill_parent"
                android:layout_height="@dimen/note_divider_height"
                android:background="@color/divider"
                android:layout_marginStart="@dimen/default_margin_dp"
                android:layout_marginEnd="@dimen/default_margin_dp"/>

            <EditText
                android:id="@+id/NOTE_CONTENT"
                android:layout_marginStart="@dimen/default_margin_dp"
                android:layout_marginEnd="@dimen/default_margin_dp"
                android:layout_width="match_parent"
                android:layout_marginTop="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="top"
                android:hint="@string/note_text_hint"
                android:inputType="textMultiLine"
                android:backgroundTint="@android:color/transparent"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="50dp" />


        </LinearLayout>
    </ScrollView>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/BTN_SAVE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="@dimen/small_margin_dp"
        android:tint="@android:color/white"
        app:backgroundTint="@color/accent"
        app:srcCompat="@drawable/ic_save_black_24dp"
        android:layout_toEndOf="@id/BTN_DEL"
        />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/BTN_DEL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_margin="@dimen/small_margin_dp"
        android:tint="@android:color/white"
        app:backgroundTint="@color/primary_dark"
        app:srcCompat="@drawable/ic_delete_black_24dp" />


</RelativeLayout>
