<resources>
    <string name="app_name">CyFile</string>
    <string name="btn_add_note">Add</string>
    <string name="note_text_hint">Note text</string>
    <string name="input_title_note_hint">Enter title</string>
    <string name="btn_save_text">SAVE</string>
    <string name="btn_delete">DELETE</string>
    <string name="note_icon">Note icon</string>
    <string name="delete_confirmation_title">Delete Note?</string>
    <string name="delete_confirmation_content">Are you sure you want to delete</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="back_confirmation_title">Leave?</string>
    <string name="back_confirmation_content">Are you sure you want to leave without saving?</string>
    <string name="settings_hide_app">Stealth Mode</string>
    <string name="settings_phone_number">Stealth Mode Pin</string>
    <string name="settings_unlock_pattern_label">Change Unlock Pattern</string>
    <string name="settings_unlock_pattern_button_label">Change</string>
    <string name="settings_title">Settings</string>
    <string name="settings_help_button_label">Help</string>
    <string name="settings_about_button_label">About</string>
    <string name="settings_licenses_button_label">Licenses</string>
    <string name="settings_contact_button_label">Contact Us</string>
    <string name="new_pattern_text">Please enter a new pattern</string>
    <string name="confirm_pattern_text">Please confirm</string>
    <string name="pattern_too_short_text">Pattern too short...</string>
    <string name="pattern_is_different_text">Patterns different</string>
    <string name="invalid_pin">Invalid Pin</string>
</resources>
